Fix bug #55416

Remove extra, unnecessary warning when the callback fails for
array_map, array_reduce and array_filter